# open_manipulator

open_manipulator_x_bringup/: CMakeLists.txt
open_manipulator_x_bringup/include/omy_hat_bringup/: omy_hat_bringup_node.hpp
open_manipulator_x_bringup/launch/: omy_hat_bringup.launch.py
open_manipulator_x_bringup/src/: omy_hat_bringup_node.cpp
open_manipulator_x_description/ros2_control/: open_manipulator_x_system.ros2_control.xacro
open_manipulator_x_description/urdf/: open_manipulator_x_robot.urdf.xacro
open_manipulator_x_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
